--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="swrapper">
 					<h1>This is a main heading</h1>
 					<p>Lorem Ipsum is simply dummy text <br /> of the printing </p>
-					<a href="#">Learn More</a>
+					<a href="images/17MKT041_Logistics(3.1)_Microsoft.pdf">Learn More</a>
 				</div>
 			</div>
 		</section>
